--- a/src/app/admin/components/products/product-list/product-list.component.html
+++ b/src/app/admin/components/products/product-list/product-list.component.html
@@ -47,6 +47,11 @@
             <td mat-cell *matCellDef="let item">{{ item.name }}</td>
           </ng-container>
 
+          <ng-container matColumnDef="CategoryName">
+            <th mat-header-cell *matHeaderCellDef class="header-cell">Kategori</th>
+            <td mat-cell *matCellDef="let item">{{ item.categoryName }}</td>
+          </ng-container>
+
           <ng-container matColumnDef="VariantID">
             <th mat-header-cell *matHeaderCellDef class="header-cell">Varyant ID</th>
             <td mat-cell *matCellDef="let item">{{ item.varyantGroupID }}</td>
