--- a/src/app/ui/components/category/category.component.scss
+++ b/src/app/ui/components/category/category.component.scss
@@ -5,6 +5,19 @@ $text-color: #484848;
 $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
 
+.page-title {
+  max-width: 1320px;
+  margin: 0.5rem auto;
+  padding: 0 2rem;
+  margin-top: 40px;
+
+  .category-name{
+    font-size: 1.4rem;
+    font-weight: bolder;
+  }
+}
+
+
 .breadcrumb {
   display: flex;
   max-width: 1320px;
@@ -20,6 +33,11 @@ $hover-color: rgba($primary-color, 0.1);
   padding: 0 1rem;
   font-family: "Roboto", Arial, sans-serif;
   color: $text-color;
+
+  .total-items{
+    font-size: 0.8rem;
+    padding: 0 1rem;
+  }
 
   .category-content {
     display: flex;
