--- a/src/app/ui/components/filter/filter.component.scss
+++ b/src/app/ui/components/filter/filter.component.scss
@@ -13,6 +13,7 @@ $hover-color: rgba($primary-color, 0.1);
   font-family: "Roboto", Arial, sans-serif;
   position: sticky;
   top: 20px;
+  width: 245px;
   max-height: calc(100vh - 40px);
   overflow-y: auto;
 
@@ -52,18 +53,33 @@ $hover-color: rgba($primary-color, 0.1);
       .category-header {
         display: flex;
         align-items: center;
+        cursor: pointer;
+        
+        &:hover {
+          background-color: $hover-color;
+        }
 
         .toggle-btn {
           background: none;
           border: none;
           cursor: pointer;
-          font-size: 0.8rem;
+          font-size: 0.6rem;
           color: $secondary-color;
           padding: 0.2rem;
-          margin-right: 0.3rem;
+          margin-right: 0.1rem;
 
           &:hover {
             background-color: $hover-color;
+          }
+        }
+
+        .category-name {
+          font-size: 0.8rem;
+          color: $text-color;
+
+          &.selected {
+            font-weight: bold;
+            color: $primary-color;
           }
         }
       }
