--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -18,6 +18,8 @@
     height: 64px;
 
     .all-products-dropdown {
+
+      padding: 0 1rem;
       button {
         background-color: transparent;
         color: white;
