--- a/src/app/ui/components/filter/filter.component.scss
+++ b/src/app/ui/components/filter/filter.component.scss
@@ -30,15 +30,13 @@ $hover-color: rgba($primary-color, 0.1);
   }
 
   .filter-group {
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.3rem;
 
     h3 {
       font-size: 0.9rem;
       color: $secondary-color;
-      margin-bottom: 0.5rem;
-      padding-bottom: 0.5rem;
       border-bottom: 1px solid $border-color;
-      border-top: 1px solid $border-color;
+      //border-top: 1px solid $border-color;
       padding-top: 0.5rem;
     }
 
