--- a/src/app/ui/components/main-header/main-header.component.html
+++ b/src/app/ui/components/main-header/main-header.component.html
@@ -16,6 +16,20 @@
                 <span>Siparişler</span>
               </a>
             </li>
+            <li>
+              <a class="nav-link" id="cartbutton" aria-current="page" data-bs-toggle="modal" type="button"
+                  data-bs-target="#cartModal" *ngIf="authService.isAuthenticated" (click)="loadComponent()">
+                  <span class="position-absolute translate-middle badge rounded-pill bg-danger">{{
+                      cartItems?.length || 0 }}</span>
+                  <svg id="cartsvg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-cart4" viewBox="0 0 16 16">
+                      <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+                  </svg>
+                  <span class="icon-text">Sepetiniz</span>
+
+              </a>
+          </li>
             <li *ngIf="authService.isAuthenticated && authService.isAdmin">
               <a (click)="navigateToAdmin()" class="nav-link">
                 <i class="fas fa-cog"></i>
@@ -27,7 +41,7 @@
   
         <div class="user-actions">
           <ng-container *ngIf="authService.isAuthenticated; else authButtons">
-            <button class="btn btn-cart" (click)="loadComponent()" [attr.data-count]="cartItems?.length || 0">
+            <button class="btn btn-cart" (click)="loadComponent()" data-bs-toggle="modal" data-bs-target="#cartModal" [attr.data-count]="cartItems?.length || 0">
               <i class="fas fa-shopping-cart"></i>
               <span class="btn-text">Sepet</span>
             </button>
@@ -63,3 +77,16 @@
   </div>
   
   <ngx-spinner name="s1" type="ball-spin-clockwise-fade"></ngx-spinner>
+
+  <div class="modal-wrapper">
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <ng-template appDynamicLoadComponent></ng-template>
+        </div>
+    </div>
+    <div class="modal fade" id="cartPriceModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <ng-template appDynamicLoadComponent></ng-template>
+        </div>
+    </div>
+</div>
