--- a/src/app/ui/components/navbar/navbar.component.html
+++ b/src/app/ui/components/navbar/navbar.component.html
@@ -100,13 +100,13 @@
           </li>
         </ul>
       </div>
-      <div class="recommended-products" *ngIf="!showOnlyMainCategories && selectedCategory && recommendedProducts.length > 0">
+      <div class="recommended-products" *ngIf="!showOnlyMainCategories && selectedCategory && recommendedProducts?.items?.length > 0">
         <div class="recommended-header">
           <h3>Tavsiye Edilenler {{ selectedCategory.name }}</h3>
           <a href="#" class="view-all">Hepsini Gör →</a>
         </div>
         <div class="product-grid">
-          <div class="product-item" *ngFor="let product of recommendedProducts" (click)="navigateToSearchResult('product',product.id)">
+          <div class="product-item" *ngFor="let product of recommendedProducts.items" (click)="navigateToSearchResult('product',product.id)">
             <img [src]="product.showcaseImage?.url" [alt]="product.name">
             <div class="product-info">
               <h3>{{ product.name }}</h3>
