--- a/src/app/ui/components/search-results/search-results.component.html
+++ b/src/app/ui/components/search-results/search-results.component.html
@@ -29,6 +29,11 @@
         <div *ngFor="let product of products" class="product-item" [routerLink]="['/product', product.id]">
           <div class="product-image">
             <img [src]="product.showcaseImage?.url || 'assets/default-product-image.jpg'" [alt]="product.name">
+            <i class="heart-icon" [ngClass]="{'liked': product.isLiked}" (click)="toggleLike($event, product)">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+              </svg>
+            </i>
           </div>
           <div class="product-info">
             <div class="name-title">
@@ -48,7 +53,7 @@
               </ng-container>
             </p>
           </div>
-          <button class="product-add-to-cart-button" [disabled]="product.stock <= 0" (click)="addToCart($event, product)">
+          <button class="product-add-to-cart-button" [disabled]="product.stock <= 0" (click)="addToCart(product)">
             Sepete Ekle
           </button>
         </div>
