--- a/src/app/ui/components/search-results/search-results.component.scss
+++ b/src/app/ui/components/search-results/search-results.component.scss
@@ -85,6 +85,14 @@ $hover-color: rgba($primary-color, 0.1);
         }
 
         .heart-icon {
+          //dışında yuvarlak bir buton oluşturmak için
+          width: 40px;
+          height: 40px;
+          background-color: rgba(234, 234, 234, 0.1);
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           position: absolute;
           top: 10px;
           right: 10px;
